[build-system]
requires = ["maturin>=1.7"]
build-backend = "maturin"

[project]
name = "pyfathom"
version = "0.1.0"
description = "Rust-powered Python module using PyO3"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.0",
    "pandas>=2.3.3",
]

[tool.maturin]
module-name = "pyfathom"
bindings = "pyo3"
